# quick_python

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: actions.yml
ci/: check-format.sh  format.sh  install-poetry.sh  lint.sh  mypy.sh  test-check.sh  test.sh  type-check.sh
quick_python/: bool_ops.py  dict_ops.py  int_ops.py  non_prims.py  primitives.py  set_ops.py  str_ops.py
tests/: test_bool.py  test_dict_ops.py  test_int_ops.py  test_non_prims.py  test_primitives.py  test_quick_python.py  test_set_ops.py  test_str_ops.py
